tests/ui/value_no_rhs.stderr
error: Invalid syntax for #[arbitrary], `value` is missing assignment.
 --> tests/ui/value_no_rhs.rs:5:16
  |
5 |     #[arbitrary(value)]
  |                ^^^^^^^
